<resources>
    <string name="app_name">HelloWorld</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Matches</string>
    <string name="tab_text_3">Settings</string>
    <string name="gender_preference">Gender Preference</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="settings">SETTINGS</string>
    <string name="account_settings">Account Settings</string>
    <string name="preferred_age">Preferred Age</string>
    <string name="enter_first_and_last_name">Enter First and Last Name</string>
    <string name="create_username">Create Username</string>
    <string name="email">Email</string>
    <string name="date">Date:</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="tim_lytvynchuk_4_24_2021">Tim Lytvynchuk 4/24/2021</string>
    <string name="go_back">Go Back</string>
    <string name="username">Username</string>
    <string name="name">Name:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="Name">Name</string>
    <string name="age">Age</string>
    <string name="Occupation">Occupation:</string>
    <string name="occupation">Occupation</string>
    <string name="Description">Description:</string>
    <string name="description">Description</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="matches">MATCHES</string>
    <string name="like">Like</string>
    <string name="shy">Shy</string>
    <string name="happy">Happy</string>
    <string name="thoughtful">Thoughtful</string>
    <string name="annoyed">Annoyed</string>
    <string name="cry">Cry</string>
    <string name="preferred_distance_miles">Preferred Distance (Miles)</string>
    <string name="Private">Private</string>
    <string name="crazy">Crazy</string>
</resources>