<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"

    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        tools:context=".SimpleFirebaseExample">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="12dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_preference"
                />

            <CheckBox
                android:id="@+id/checkBoxMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Male" />

            <CheckBox
                android:id="@+id/checkBoxFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_settings"
                android:paddingRight="10dp"
                />

            <Switch
                android:id="@+id/switchAccSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Private"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/preferred_age" />

            <SeekBar
                android:id="@+id/seekBarAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="120"
                android:min="18"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="Preferred Distance (Miles)" />

            <SeekBar
                android:id="@+id/seekBarDistance"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="3" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
